--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytes = "1.5.0"
+ndn-protocol = { version = "0.3.0", path = "../ndn-protocol" }
+ndn-tlv = { version = "0.3.0", path = "../ndn-tlv" }
